--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/wilderness_society_logo.jpeg",
+    "icon": "./assets/images/iconss.png",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
