--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-maps": "^0.24.2",
+    "react-native-tts": "^3.0.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
   },
