--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "docusign-esign": "^4.3.0"
+    "docusign-esign": "^4.3.0",
+    "express": "^4.17.1"
   }
 }
